--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,16 +11,16 @@
 <div class="container-fluid" ng-controller="IndexController">
 	<div class="row">
 		<div class="form-group col-sm-6">
-			RA: <input type="text" class="form-control">
-			Nome: <input type="text" class="form-control">
+			RA: <input type="text" class="form-control" ng-model="aluno.ra">
+			Nome: <input type="text" class="form-control" ng-model="aluno.nome">
 		</div>
 	</div>
 	<div class="row">
 		<div class="form-group col-sm-6">
-			<button class="btn btn-default">Cadastrar</button>
+			<button class="btn btn-default" ng-click="cadastrar(aluno)">Cadastrar</button>
 		</div>
 	</div>
+	{{alunos}}
 </div>
-<input type="text" ng-model="nome">{{nome}}
 </body>
 </html>
