--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,20 @@
 			<button class="btn btn-default" ng-click="cadastrar(aluno)">Cadastrar</button>
 		</div>
 	</div>
-	{{alunos}}
+	<div class="row">
+		<table>
+			<thead>
+				<th>RA</th>
+				<th>NOME</th>
+			</thead>
+			<tbody>
+				<tr>
+					<td></td>
+					<td></td>
+				</tr>
+			</tbody>
+		</table>	
+	</div>
 </div>
 </body>
 </html>
