--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,19 +22,25 @@
 		</div>
 	</div>
 	<div class="row">
-	
-		<table class="table table-striped table-bordered">
-			<thead>
-				<th>RA</th>
-				<th>NOME</th>
-			</thead>
-			<tbody>
-				<tr ng-repeat ="a in alunos">
-					<td>{{a.ra}}</td>
-					<td>{{a.nome}}</td>
-				</tr>
-			</tbody>
-		</table>	
+		<div class="form-group col-sm-6">
+			<input type="text" placeholder="Procurar nome..." ng-model="search" class="form-control">
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-6">
+			<table class="table table-striped table-bordered">
+				<thead>
+					<th>RA</th>
+					<th>NOME</th>
+				</thead>
+				<tbody>
+					<tr ng-repeat ="a in alunos | filter:search">
+						<td>{{a.ra}}</td>
+						<td>{{a.nome}}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>	
 	</div>
 </div>
 </body>
